[bugfix] Collapse: improve performance & optimize initial style set
fix #1494

--- a/packages/collapse-item/index.less
+++ b/packages/collapse-item/index.less
@@ -27,6 +27,10 @@
 
   &__wrapper {
     overflow: hidden;
+
+    &--transition {
+      transition: height 300ms ease-in-out;
+    }
   }
 
   &__content {
